--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+bin/
+
+# Locally Hosted Webapp Data Folder (for dev purposes only) #
+data/
+
+### Eclipse ###
+.settings/
+.project
+.classpath
+
+### IntelliJ IDEA ###
 .idea/
-.gradle/
+out/
+*.iml
+*.eml
+
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
