Split project into two
Create web subproject for webapp itself, and the base project is just for the jetty wrapper.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 bin/
 
 # Locally Hosted Webapp Data Folder (for dev purposes only) #
-data/
+dist
+
+# Temporary Files #
+tmp
+*~*
 
 ### Eclipse ###
 .settings/
