--- a/web/build.gradle
+++ b/web/build.gradle
@@ -53,7 +53,7 @@ jooq {
     derby(sourceSets.main) {
         jdbc {
             driver = 'org.apache.derby.jdbc.EmbeddedDriver'
-            url = 'jdbc:derby:Q:/Software Development/007 Projects/Java/000 Web Applications/mylittlebooru/dist/data/db;create=true'
+            url = 'jdbc:derby:' + rootProject.projectDir + '/dist/data/db;create=true'
             user = ''
             password = ''
             schema = 'APP'
