--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,25 +1,27 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
+//buildscript {
+//    repositories {
+//        jcenter()
+//    }
+//
+//    dependencies {
+//        classpath 'nu.studer:gradle-jooq-plugin:1.0.+'
+//        classpath 'org.apache.derby:derby:10.11.1.1'
+//    }
+//    configurations.classpath {
+//        resolutionStrategy {                            // enforce a specific jOOQ version
+//            forcedModules = [
+//                    'org.jooq:jooq:3.7.+',
+//                    'org.jooq:jooq-meta:3.7.+',
+//                    'org.jooq:jooq-codegen:3.7.+'
+//            ]
+//        }
+//    }
+//}
 
-    dependencies {
-        classpath 'nu.studer:gradle-jooq-plugin:1.0.+'
-        classpath 'org.apache.derby:derby:10.11.1.1'
-    }
-    configurations.classpath {
-        resolutionStrategy {                            // enforce a specific jOOQ version
-            forcedModules = [
-                    'org.jooq:jooq:3.7.+',
-                    'org.jooq:jooq-meta:3.7.+',
-                    'org.jooq:jooq-codegen:3.7.+'
-            ]
-        }
-    }
+plugins {
+    id 'nu.studer.jooq' version '3.0.+'
+    id 'war'
 }
-
-apply plugin: 'war'
-apply plugin: 'nu.studer.jooq'
 
 dependencies {
     // Servlet
@@ -33,7 +35,7 @@ dependencies {
     // Servlet Filters
     compile 'org.tuckey:urlrewritefilter:4.0.+'
 
-    // Security
+    // Security``
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
 
     // Database
