Add DataManager library as submodule

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'mylittlebooru'
 
 include ':web'
+
+include ':DataManager'
+project(":DataManager").projectDir = new File(settingsDir, "lib/DataManager")
