--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'mylittlebooru'
 
 include ':web'
+include ':mobile'
 
 include ':DataManager'
 project(":DataManager").projectDir = new File(settingsDir, "lib/DataManager")
