--- a/web/build.gradle
+++ b/web/build.gradle
@@ -19,11 +19,21 @@
 //}
 
 plugins {
-    id 'nu.studer.jooq' version '3.0.+'
+    id 'nu.studer.jooq' version '3.0.3'
     id 'war'
 }
 
+sourceCompatibility = 1.8
+
 dependencies {
+    // Logging
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    runtime group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.+'
+
+    // Testing
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+
     // Servlet
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.+'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.22.+'
