--- a/web/build.gradle
+++ b/web/build.gradle
@@ -45,14 +45,15 @@ dependencies {
     // Servlet Filters
     compile 'org.tuckey:urlrewritefilter:4.0.+'
 
-    // Security``
+    // Security
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
 
     // Database
-    runtime group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'
-    compile 'org.jooq:jooq:3.7.+'
-    compile 'org.jooq:jooq-meta:3.7.+'
-    compile 'org.jooq:jooq-codegen:3.7.+'
+//    runtime group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'
+    jooqRuntime 'postgresql:postgresql:9.1-901-1.jdbc4'
+    compile 'org.jooq:jooq:3.11.9'
+    compile 'org.jooq:jooq-meta:3.11.9'
+    compile 'org.jooq:jooq-codegen:3.11.9'
 }
 
 sourceSets {
@@ -70,36 +71,49 @@ task explodedWar(type: Copy) {
 }
 
 jooq {
-    derby(sourceSets.main) {
+    version = '3.11.9'
+    edition = 'OSS'
+    sample(sourceSets.main) {
         jdbc {
-            driver = 'org.apache.derby.jdbc.EmbeddedDriver'
-            url = 'jdbc:derby:' + rootProject.projectDir + '/dist/data/db;create=true'
-            user = ''
-            password = ''
-            schema = 'APP'
-            properties {
-                property {
-                    key = 'ssl'
-                    value = 'true'
-                }
-            }
+            driver = 'org.postgresql.Driver'
+            url = 'jdbc:postgresql://pg1.home.abopu.com:5432/mylittlebooru'
+            user = 'booru'
+            password = '3uwr8prA'
         }
         generator {
-            name = 'org.jooq.util.DefaultGenerator'
+            name = 'org.jooq.codegen.DefaultGenerator'
             strategy {
-                name = 'org.jooq.util.DefaultGeneratorStrategy'
+                name = 'org.jooq.codegen.DefaultGeneratorStrategy'
                 // ...
             }
             database {
-                inputSchema = 'APP'
+                name = 'org.jooq.meta.postgres.PostgresDatabase'
+                inputSchema = 'recipebook'
+                forcedTypes {
+                    forcedType {
+                        name = 'varchar'
+                        expression = '.*'
+                        types = 'JSONB?'
+                    }
+                    forcedType {
+                        name = 'varchar'
+                        expression = '.*'
+                        types = 'INET'
+                    }
+                }
+                // ...
             }
             generate {
-                pojos = true
-                daos = true
+                relations = true
+                deprecated = false
+                records = true
+                immutablePojos = true
+                fluentSetters = true
+                // ...
             }
             target {
-                packageName = 'com.abopu.booru.db.derby'
-                directory = new File(project(':web').projectDir, 'src/main/generated/java')
+                packageName = 'com.abopu.booru'
+                directory = 'src/main/generated'
             }
         }
     }
@@ -107,6 +121,6 @@ jooq {
 
 idea {
     module {
-        generatedSourceDirs += file('src/main/generated/java')
+        generatedSourceDirs += file('src/main/generated')
     }
 }
