--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/DataManager"]
-	path = lib/DataManager
+	path = modules/data-manager
 	url = https://gitlab.abopu.com/sarah/DataManager.git
